# pkg/generated/goserver/api_items.go
@@ -12,6 +12,7 @@
 package goserver
 
 import (
+	"encoding/json"
 	"net/http"
 	"strings"
 )
@@ -54,6 +55,11 @@ func (c *ItemsAPIController) Routes() Routes {
 			"/v1/items",
 			c.GetItems,
 		},
+		"PutItems": Route{
+			strings.ToUpper("Put"),
+			"/v1/items",
+			c.PutItems,
+		},
 	}
 }
 
@@ -72,6 +78,33 @@ func (c *ItemsAPIController) GetItems(w http.ResponseWriter, r *http.Request) {
 	} else {
 	}
 	result, err := c.service.GetItems(r.Context(), dateParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, w)
+}
+
+// PutItems - upsert diary item
+func (c *ItemsAPIController) PutItems(w http.ResponseWriter, r *http.Request) {
+	itemsRequestParam := ItemsRequest{}
+	d := json.NewDecoder(r.Body)
+	d.DisallowUnknownFields()
+	if err := d.Decode(&itemsRequestParam); err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	if err := AssertItemsRequestRequired(itemsRequestParam); err != nil {
+		c.errorHandler(w, r, err, nil)
+		return
+	}
+	if err := AssertItemsRequestConstraints(itemsRequestParam); err != nil {
+		c.errorHandler(w, r, err, nil)
+		return
+	}
+	result, err := c.service.PutItems(r.Context(), itemsRequestParam)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		c.errorHandler(w, r, err, &result)
